fix overflow property in style.css; change from overflow hidden to overflow-x hidden on body to prevent horizontal scrolling due to animations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,12 +136,7 @@ body {
   background-color: var(--background-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-body,
-section,
-.container {
-  overflow: hidden; /* Prevent horizontal scrolling because of the  animations */
+  overflow-x: hidden; /* Prevent horizontal scrolling because of the  animations */
 }
 
 /* iOS Safari viewport height fix */
